// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid renders 0 1`] = `
Array [
  .c0 {
  grid: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders function 1`] = `
Array [
  .c0 {
  grid: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid: has;
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders invalid theme path 1`] = `
Array [
  .c0 {
  grid: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders negative number 1`] = `
Array [
  .c0 {
  grid: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid: July;
  }
}

@media April {
  .c0 {
    grid: August;
  }
}

@media January {
  .c0 {
    grid: September;
  }
}

@media April {
  .c0 {
    grid: November;
  }
}

@media June {
  .c0 {
    grid: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid: July;
  }
}

@media April {
  .c0 {
    grid: August;
  }
}

@media January {
  .c0 {
    grid: September;
  }
}

@media April {
  .c0 {
    grid: November;
  }
}

@media June {
  .c0 {
    grid: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid: January;
  }
}

@media April {
  .c0 {
    grid: December;
  }
}

@media January {
  .c0 {
    grid: April;
  }
}

@media April {
  .c0 {
    grid: May;
  }
}

@media June {
  .c0 {
    grid: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid: January;
  }
}

@media April {
  .c0 {
    grid: December;
  }
}

@media January {
  .c0 {
    grid: April;
  }
}

@media April {
  .c0 {
    grid: May;
  }
}

@media June {
  .c0 {
    grid: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders postitive number 1`] = `
Array [
  .c0 {
  grid: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders string 1`] = `
Array [
  .c0 {
  grid: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid: June;
}

<div
    className="c0"
  />,
]
`;

exports[`grid renders valid theme path 1`] = `
Array [
  .c0 {
  grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
